...
  onPress,
  style: listItemStyle,
}) => {
  const { geo } = friend.address;
  return (
    <List.Item
      testID="friend-list-item"
      style={listItemStyle}
      onPress={() => onPress(friend)}
      title={friend.name}
      description={
        friend.distanceInKm !== undefined
          ? `${intl.formatNumber(friend.distanceInKm, {
...
