...

  return isLoadingFriends || isLoadingGeolocation ? (
    <ActivityIndicator animating />
  ) : (
    <AppList
      ListHeaderComponent={() => (
        <ListTitle testID="friend-list-title" style={styles.header}>
          Friends
        </ListTitle>
      )}
      data={friends}
      keyExtractor={(friend) => `${friend.id}`}
      initialNumToRender={20}
...
