...
        backdropTransitionInTiming={animationDuration}
        backdropColor={theme.colors.backdrop}>
        <Card elevation={0}>
          <Card.Content>
            <Title style={styles.title}>Add new todo</Title>
            <TextInput
              testID="new-todo-text"
              mode="outlined"
              autoFocus
              maxLength={200}
              placeholder="New Todo..."
              onChangeText={(text) => setNewTodo(text)}
              blurOnSubmit
...
